--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
     <div class="option-container">
         <div class="destroyer-preview destroyer" draggable="true"></div>
         <div class="submarine-preview submarine" draggable="true"></div>
-        <div class="cruiser-preview" draggable="true"></div>
-        <div class="battleship-preview" draggable="true"></div>
-        <div class="carrier-preview" draggable="true"></div>
-
-
+        <div class="cruiser-preview cruiser" draggable="true"></div>
+        <div class="battleship-preview battleship" draggable="true"></div>
+        <div class="carrier-preview carrier" draggable="true"></div>
     </div>
+
+    <button id="flip-button">FLIP</button>
+    <button id="start-button">START</button>
 
 
     <!-- LATEST JQUERY -->
